--- a/frontend/src/styles/error404.css
+++ b/frontend/src/styles/error404.css
@@ -1,13 +1,13 @@
 .error_404{
 	height: 100vh;
 	width: 100%;
-	background: linear-gradient(90deg, #036, #001a33); /* Color del fondo de la pagina de error (gradiente) */
+	background: linear-gradient(90deg, #292524, #1c1917); /* Color del fondo de la pagina de error (gradiente) */
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
 	.card{
-		background-color: #eef7ff;
+		background-color: #fafaf9;
 		padding: 6.5vh;
 		border-radius: 24px;
 		display: flex;
@@ -18,14 +18,14 @@
 			margin: 0;
 			font-size: 120px;
 			font-weight: bold;
-			color: #036;
+			color: #1c1917;
 		}
 
 		h3{
 			margin: 0;
 			font-size: 24px;
 			font-weight: lighter;
-			color: #036;
+			color: #1c1917;
 		}
 
 		h4{
@@ -33,7 +33,7 @@
 			padding-top: 2vh;
 			font-size: 14px;
 			font-weight: lighter;
-			color: #036;
+			color: #1c1917;
 		}
 	}
 }
