--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
-  background-color: #242424;
+  color: #1c1917;
+  background-color: #fafaf9;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
@@ -13,12 +13,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #57534e;
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  color: #292524;
 }
 
 body {
@@ -42,13 +42,13 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #e7e5e4;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: #57534e;
 }
 
 button:focus,
@@ -58,15 +58,15 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #1c1917;
     background-color: #fff;
   }
 
   a:hover {
-    color: #747bff;
+    color: #44403c;
   }
 
   button {
-    background-color: #f9f9f9;
+    background-color: #f5f5f4;
   }
 }
